# Shinmy

./: Cargo.toml  build.rs
assets/: shinmy.manifest  shinmy.rc
shinmy-mallet/: Cargo.toml  build.rs
shinmy-mallet/src/: lib.rs
shinmy-mallet/src/proxy/: version.rs  winhttp.rs
src/: main.rs  utils.rs
