[package]
name = "shinmy"
version = "1.0.0"
edition = "2021"

[dependencies]
notify = "7.0"
tinyjson = "2.5"
rand = "0.8"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader"
]

[build-dependencies]
embed-resource = "2.4"

[workspace]
resolver = "2"
members = [
    "shinmy-mallet"
]